@@ -241,3 +241,4 @@ https://koreatimes.co.kr/www/nation/2024/11/732_386104.html?utm_source=fl
 https://koreatimes.co.kr/www/nation/2024/11/688_386049.html?utm_source=fl
 https://koreatimes.co.kr/www/nation/2024/11/732_386099.html?utm_source=fl
 https://en.yna.co.kr/view/AEN20241111009200315?section=culture/k-pop&input=rss
+https://en.yna.co.kr/view/AEN20241112003251315?section=culture/k-pop&input=rss
